<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical"
    tools:context=".FilmDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/media_image"
            android:layout_width="match_parent"
            android:layout_height="239dp"
            android:src="@drawable/shawshank"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/media_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/sample_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/media_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sample_year"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/label"
                android:text="@string/stars"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/film_stars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/sample_stars"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/label"
                android:text="@string/description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/film_descriptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_descriptions"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>