<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/film_image"
            android:layout_width="match_parent"
            android:layout_height="239dp"
            android:src="@drawable/shawshank" />

        <TextView
            android:id="@+id/film_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/sample_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/film_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sample_year"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/film_stars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sample_stars"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/film_descriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_descriptions"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>