<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="getFilms"
            android:id="@+id/show_films"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:backgroundTint="#656565"
            android:text="@string/films"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/show_series"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:backgroundTint="#656565"
            android:text="@string/series"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/show_music"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:backgroundTint="#656565"
            android:text="@string/music"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/film_recycler"
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints" />
</androidx.appcompat.widget.LinearLayoutCompat>